<resources>
    <string name="app_name">CadenaDeFavors</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="intro_password">Contrasenya</string>
    <string name="btn_sign_in">Iniciar sessió</string>

    <string name="action_sign_in_short">Inici de sessió</string>
    <string name="welcome">Hola !</string>
    <string name="invalid_username">Nom d\'usuari no vàlid</string>
    <string name="invalid_password">La contrasenya ha de tenir >5 caràcters</string>
    <string name="login_failed">Inici de sessió fallit</string>
    <string name="next">SEGÜENT</string>
    <string name="code">Codi</string>
    <string name="text_recoverpassword">T\'hem enviat un codi al teu correu electrònic.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="password_forgotten_text">He oblidat la contrasenya</string>
    <string name="gotoregister_text">Registrar-se</string>
    <string name="login_text">Introdueix el teu correu electrònic i la teva contrasenya</string>
    <string name="intro_quantity">Quantitat</string>
    <string name="transfer_activity_txt">Introdueix la quantitat i el correu electrònic del beneficiari</string>
    <string name="transfer">Transferir</string>
    <string name="generic_name">Nom</string>
    <string name="add_image">Afegeix una imatge</string>
    <string name="offer_image">Imatge de la oferta</string>
    <string name="offer_title">Títol de l\'oferta</string>
    <string name="offer_description">Descripció</string>
    <string name="offer_price">Preu</string>
    <string name="offer_category">Categoria</string>
    <string name="offer_owner">Oferidor</string>
    <string name="fer_una_transferencia">Fer una transferència</string>
    <string name="logout">Sortir</string>
    <string name="el_meu_perfil">El meu perfil</string>
    <string name="long_text" translatable="false">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</string>
    <string name="home">Inici</string>
    <string name="Offers">Ofertes</string>
    <string name="Opinions">Opinions</string>
    <string name="info">+Info</string>

    <string name="delete">Borrar</string>
    <string name="edit">Editar</string>
    <string-array name="categories_list">
        <item>Escull la categoria</item>
        <item>Menjar</item>
        <item>Automoció</item>
        <item>Informàtica</item>
        <item>Jardineria</item>
    </string-array>
    <string name="intro_username">Nom d\'usuari</string>
    <string name="afegir_imatge">Afegir imatge</string>
    <string name="afegeix_una_oferta">Afegeix una oferta</string>
    <string name="edit_favor">Editar favor</string>
    <string name="save_favor">Guardar favor</string>
    <string name="inici">Inici</string>
    <string name="oferta">Oferta</string>
    <string name="registre">Registre</string>
    <string name="autenticacio">Autenticació</string>
    <string name="recupera_contrasenya">Recupera contrasenya</string>
    <string name="resultats">Resultats</string>
    <string name="transferir">Transferir</string>
    <string name="valoracio">Valoració</string>
    <string name="afegir_oferta">Afegir oferta</string>
    <string name="correu_electr_nic_del_destinatari">Correu electrònic del destinatari</string>
    <string name="escribe_mensaje">Escriu el teu missatge</string>
    <string name="enviar">Enviar</string>
    <string name="chat">Xat</string>
    <string name="email">Correu electrònic</string>
    <string name="descripcio">Descripció</string>
    <string name="preu">Preu</string>
    <string name="titol">Títol</string>
    <string name="els_teus_favors">Els teus favors</string>
</resources>
