<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_background">

            <ImageView
                android:id="@+id/imgOffer"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/offer_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txtOfferTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/offer_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imgOffer"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtOwner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/offer_owner"
                android:textColor="@color/link_color"
                app:layout_constraintBottom_toBottomOf="@+id/imgOffer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgOffer"
                app:layout_constraintTop_toBottomOf="@+id/txtOfferTitle"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/offer_price"
                android:textColor="#1E193E"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgOffer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgOffer"
                app:layout_constraintTop_toBottomOf="@+id/txtOwner"
                app:layout_constraintVertical_bias="0.136" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/offer_description"
                app:layout_constraintBottom_toBottomOf="@+id/imgOffer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgOffer"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>